--- a/index.html
+++ b/index.html
@@ -1,45 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>Send Data to Google Sheet</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Submit Data to Google Sheet</title>
     </head>
     <body>
-        <form id="dataForm">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name"><br><br>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email"><br><br>
-            <label for="message">Message:</label>
-            <textarea id="message" name="message"></textarea><br><br>
-            <input type="button" value="Submit" onclick="sendData()">
+        <h2>Submit Data</h2>
+        <form id="myForm">
+            <label for="name">Name:</label><br>
+            <input type="text" id="name" name="name" required><br><br>
+            <label for="email">Email:</label><br>
+            <input type="email" id="email" name="email" required><br><br>
+            <label for="message">Message:</label><br>
+            <textarea id="message" name="message" rows="4" required></textarea><br><br>
+            <button type="submit">Submit</button>
         </form>
 
+        <div id="response"></div>
+
         <script>
-        function sendData() {
-            var name = document.getElementById('name').value;
-            var email = document.getElementById('email').value;
-            var message = document.getElementById('message').value;
-
-            var data = {
-                name: name,
-                email: email,
-                message: message
-            };
-
-            var xhr = new XMLHttpRequest();
-            
-            var url = 'https://script.google.com/macros/s/AKfycbzGVF2Ko8gK7YjnuvIuQyWG4aYFjHSujUOn2KVcIjAs6ib_5NdaBcyhqQnPsRQqqLDUeQ/exec'; // เปลี่ยน URL เป็น Web App ของคุณ
-            xhr.open('POST', url, true);
-            xhr.setRequestHeader('Content-Type', 'application/json');
-            xhr.onreadystatechange = function () {
-                if (xhr.readyState === 4 && xhr.status === 200) {
-                    var json = JSON.parse(xhr.responseText);
-                    console.log(json.result);
-                    alert("ส่งข้อมูลสำเร็จ!");
-                }
-            };
-            xhr.send(JSON.stringify(data));
-        }
-        </script>
+    document.getElementById("myForm").addEventListener("submit", function(event) {
+      event.preventDefault();
+      var formData = new FormData(this);
+      var xhr = new XMLHttpRequest();
+      xhr.open("POST", "https://script.google.com/macros/s/AKfycbzGVF2Ko8gK7YjnuvIuQyWG4aYFjHSujUOn2KVcIjAs6ib_5NdaBcyhqQnPsRQqqLDUeQ/exec"); // Replace with your Google Apps Script web app URL
+      xhr.onload = function() {
+        var response = JSON.parse(xhr.responseText);
+        document.getElementById("response").innerHTML = "<p>Status: " + response.status + "</p><p>" + response.message + "</p>";
+        document.getElementById("myForm").reset();
+      };
+      xhr.send(formData);
+    });
+  </script>
     </body>
 </html>
