--- a/index.html
+++ b/index.html
@@ -23,20 +23,13 @@
     document.getElementById("myForm").addEventListener("submit", function(event) {
       event.preventDefault();
       var formData = new FormData(this);
-      var url = "https://cors-anywhere.herokuapp.com/https://script.google.com/macros/s/AKfycbzGVF2Ko8gK7YjnuvIuQyWG4aYFjHSujUOn2KVcIjAs6ib_5NdaBcyhqQnPsRQqqLDUeQ/exec";
       var xhr = new XMLHttpRequest();
-      xhr.open("POST", url); // Using a proxy to bypass CORS
-
+      xhr.open("POST", "YOUR_SCRIPT_URL"); // Replace with your Google Apps Script web app URL
       xhr.onload = function() {
         var response = JSON.parse(xhr.responseText);
         document.getElementById("response").innerHTML = "<p>Status: " + response.status + "</p><p>" + response.message + "</p>";
         document.getElementById("myForm").reset();
       };
-
-      xhr.onerror = function() {
-        console.error("Error while submitting the form.");
-      };
-
       xhr.send(formData);
     });
   </script>
