--- a/index.html
+++ b/index.html
@@ -39,11 +39,7 @@
               response.message +
               '</p>'
             document.getElementById('myForm').reset()
-
-            // Input value Clear
-            document.getElementById('name').value = ''
-            document.getElementById('email').value = ''
-            document.getElementById('message').value = ''
+window.location.href = "https://google.com";
           }
           xhr.send(formData)
         })
