--- a/index.html
+++ b/index.html
@@ -26,11 +26,14 @@
         .addEventListener('submit', function (event) {
           event.preventDefault()
           var formData = new FormData(this)
-          var proxyUrl = 'https://cors-anywhere.herokuapp.com/'
-          var targetUrl =
+          var url =
             'https://script.google.com/macros/s/AKfycbzGVF2Ko8gK7YjnuvIuQyWG4aYFjHSujUOn2KVcIjAs6ib_5NdaBcyhqQnPsRQqqLDUeQ/exec'
           var xhr = new XMLHttpRequest()
-          xhr.open('POST', proxyUrl + targetUrl)
+          xhr.open('POST', url)
+          xhr.setRequestHeader(
+            'Content-Type',
+            'application/x-www-form-urlencoded'
+          )
 
           xhr.onload = function () {
             var response = JSON.parse(xhr.responseText)
@@ -47,7 +50,7 @@
             console.error('Error while submitting the form.')
           }
 
-          xhr.send(formData)
+          xhr.send(new URLSearchParams(formData))
         })
     </script>
   </body>
